--- a/css/Meus_Projetos.css
+++ b/css/Meus_Projetos.css
@@ -1,3 +1,11 @@
+@import url(header.css);
+
+.content_Project h1 span{
+    background: var(--gradiente);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
 .content_Project {
     padding: 0 30px;
     margin-top: 80px;
@@ -70,31 +78,30 @@
 
 @media (max-width: 800px) {
     .Project {
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        display: flex;
+        flex-wrap: wrap;
     }
-
-    .projeto-1 {
-        grid-column: 1/4;
-    }
-
-    .projeto-2 {
-        grid-row: 2;
-        grid-column: 1/4;
-    }
-
-    .projeto-3 {
-        grid-row: 3;
-        grid-column: 1/4;
-    }
-
-    .projeto-4 {
-        grid-column: 1/4;
-        grid-row: 4;
-    }
-
+    .projeto-1,
+    .projeto-2,
+    .projeto-3,
+    .projeto-4,
     .projeto-5 {
-        grid-row: 5;
-        grid-column: 1/4;
+        width: 100%;
+    }
+
+}
+@media (max-width: 450px){
+    .content_Project{
+        margin-top: 25px;
+        gap: 10px;
+    }
+    .projeto-1,
+    .projeto-2,
+    .projeto-3,
+    .projeto-4,
+    .projeto-5 {
+        height: 200px;
+        border-radius: 20px;
     }
 
 }
