atulizacão menu-responsivo

--- a/css/Apresentação_Pessoal.css
+++ b/css/Apresentação_Pessoal.css
@@ -24,7 +24,7 @@
 
 .contet_description h1 span {
     background: var(--gradiente);
-    -webkit-background-clip: text;
+    background-clip: text;
     color: transparent;
 }
 
