--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
@@ -13,25 +13,25 @@
     --color7: #394551;
     --color8: #ffffff;
     /* haronia de tons quente */
-    --colorQ1:#FF4500;
-    --colorQ2:#FFD700;
-    --colorQ3:#FF6347;
+    --colorQ1: #FF4500;
+    --colorQ2: #FFD700;
+    --colorQ3: #FF6347;
     /* Contastre vibrante */
-    --colorV1:#00CED1;
-    --colorV2:#8A2BE2;
-    --colorV3:#32CD32 ;
+    --colorV1: #00CED1;
+    --colorV2: #8A2BE2;
+    --colorV3: #32CD32;
     /* tons Neutros */
-    --colorN1:#808080;
-    --colorN2:#A9A9A9;
-    --coloN3:#D3D3D3;
+    --colorN1: #808080;
+    --colorN2: #A9A9A9;
+    --coloN3: #D3D3D3;
     /* gradient */
-    --gradiente:linear-gradient(to right, #ff0080, #ff8c00);
-    --gradiente2:linear-gradient(to right, #48AFBE, #BE6C48);
-    --gradiente3:radial-gradient(circle, #48AFBE, #BE6C48);
+    --gradiente: linear-gradient(to right, #ff0080, #ff8c00);
+    --gradiente2: linear-gradient(to right, #48AFBE, #BE6C48);
+    --gradiente3: radial-gradient(circle, #48AFBE, #BE6C48);
 }
 
 body {
-    background-color:white;
+    background-color: white;
     box-sizing: border-box;
 }
 
@@ -47,8 +47,6 @@ body {
 
 /* ============================ formatacão da descricão do portfolio ===============*/
 
-.descricao_header{
-}
 .content_description {
     max-width: 100%;
     padding: 50px;
@@ -101,7 +99,6 @@ body {
     align-items: center;
     justify-content: space-between;
     background: var(--gradiente2);
-    
     width: 100%;
     height: 50px;
     z-index: 100;
@@ -159,7 +156,7 @@ body {
 }
 
 @media (max-width: 1030px) {
-   
+
     .menu-header {
         gap: 20px;
     }
@@ -170,7 +167,8 @@ body {
     .content_description {
         padding: 10px 20px;
     }
-    .content_description h1{
+
+    .content_description h1 {
         font-size: 40px;
     }
 
@@ -189,27 +187,40 @@ body {
         position: absolute;
         top: 45px;
         padding: 0;
-        background-color: var(--color8);
-        left: -100%;
+        height: 0;
+        /* background-color: var(--color8);
+        opacity: 1; */
+        transition: 1s;
     }
+
     .menu-header li {
         padding: 0;
-        transform: translateX(-100%);
+        /* transform: translateX(-100%); */
         opacity: 0;
         background-color: var(--color8);
         color: var(--color7);
-        transition: .4s;
+        /* transition: transform 0.5s ease, opacity 0.5s ease;  */
 
     }
-    .menu.active .menu-header{
-        left: 0;
+
+    .menu.active .menu-header {
+        /* opacity: 1;
+        height: 325px; */
     }
+
     .menu.active .menu-header li {
         padding: 15px 30px;
         transform: translateX(0px);
         transition-delay: calc(.1s * var(--i));
         opacity: 1;
     }
+
+    .menu:not(.active) .menu-header li {
+        transform: translateX(-100%); /* Reverte a transformação para 0% */
+        opacity: 1;
+        transition-delay: calc(.1s * var(--i)); /* Inverte a transição para saída quando não está ativo */
+    }
+    
 
     .menu {
         width: 100%;
@@ -219,7 +230,7 @@ body {
 }
 
 @media (max-width: 650px) {
-    
+
     .content_description p {
         width: 100%;
     }
@@ -229,4 +240,3 @@ body {
     }
 
 }
-
