--- a/css/header.css
+++ b/css/header.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     /* height: 100vh; */
     height: min-content;
-    background: url(/img/background-img.jpg);
+    background: url(img/background-img.jpg);
     background-position: center;
     background-size: cover;
 }
