--- a/css/header.css
+++ b/css/header.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     /* height: 100vh; */
     height: min-content;
-    background: url(img/background-img.jpg);
+    background: url(/img/background-img.jpg);
     background-position: center;
     background-size: cover;
 }
@@ -66,6 +66,7 @@ body {
 }
 
 .content_description h2 {
+    font-size: 30px;
     font-weight: 600;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
 }
