--- a/css/tecnologias.css
+++ b/css/tecnologias.css
@@ -13,3 +13,21 @@
     text-align: center;
     display: inline-block;
 }
+/* ============================== card tecnologia ================ */
+.tecnologias{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+.card_tecnologia{
+    width: 20%;
+    height: 300px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
+    border-top: 6px solid var(--color2);
+    border-bottom: 6px solid var(--color2);
+    transition: 5s;
+}
+.card_tecnologia:hover{
+    background: linear-gradient(rgba(0, 0, 0, .1),var(--color2));
+}
