--- a/css/Meus_Serviços.css
+++ b/css/Meus_Serviços.css
@@ -17,7 +17,7 @@
 }
 .content_title h1 span{
     background: linear-gradient(to right, #ff8c00, #ff0080);
-    -webkit-background-clip: text;
+    background-clip: text;
     color: transparent;
 }
 /*================= card_item ========= */
