--- a/css/header.css
+++ b/css/header.css
@@ -38,8 +38,8 @@ body {
 /* ======================= header ==============*/
 .content {
     width: 100%;
-    /* height: 100vh; */
-    height: min-content;
+    height: 100vh;
+    /* height: min-content; */
     background: url(/img/background-img.jpg);
     background-position: center;
     background-size: cover;
@@ -189,18 +189,15 @@ body {
         top: 45px;
         padding: 0;
         height: 0;
-        /* background-color: var(--color8);
-        opacity: 1; */
+        
         transition: 1s;
     }
 
     .menu-header li {
         padding: 0;
-        /* transform: translateX(-100%); */
         opacity: 0;
         background-color: var(--color8);
         color: var(--color7);
-        /* transition: transform 0.5s ease, opacity 0.5s ease;  */
 
     }
 
