--- a/css/header.css
+++ b/css/header.css
@@ -38,7 +38,7 @@ body {
 /* ======================= header ==============*/
 .content {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     /* height: min-content; */
     background: url(/img/background-img.jpg);
     background-position: center;
