--- a/css/depoimentos.css
+++ b/css/depoimentos.css
@@ -1,18 +1,124 @@
 .depoimentos {
-    padding:0 30px;
-    padding-bottom: 400px;
-    margin-top: 50px;
+    padding: 50px 0;
+    /* padding-bottom: 400px; */
+    background: var(--gradiente);
+    margin-top: 90px;
+    margin-bottom: 100px;
+    /* height: 80vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    /* ================== FORMATAÇÃO DE ITEM FILHOS ==================== */
 
-    div {
-        width: 400px;
+    .content_cometarios {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 30px;
+
+        h1 {
+            color: var(--color8);
+        }
+
+    }
+
+    .swiper-container {
+        width: 1000px;
         height: 400px;
-        background-color: aqua;
+        overflow: hidden;
+        padding: 30px;
+        background-color:bisque;
+        position: relative;
+
+        .swiper-pagination{
+            color: black;
+        }
+
+    }
+
+    .swiper-wrapper {
+
+
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+ /* =============FORMATAÇÃO DOS ITENS  .SWIPER-SLIDE ================= */
+            .text_comentatio {
+                width: 60%;
+                height: 50%;
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+                background-color: var(--color7);
+                border-radius: 15px 0 0 15px;
+                padding: 10px 20px;
+
+                p,
+                h4 {
+                    text-align: left;
+                    color: var(--color8);
+                }
+
+                p {
+                    font-weight: lighter;
+                }
+
+
+            }
+
+            .use_img {
+                width: 30%;
+                height: 100%;
+                border-radius: 15px;
+                background-color: var(--color7);
+                overflow: hidden;
+            }
+
+            .use_img img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+        }
     }
 
 
+    
+/*=================FORMATAÇÃO INTENS POST ================= */
 
+    .text_post {
+        width: 40%;
+        display: flex;
+        margin-top: 20px;
 
+        input {
+            width: 100%;
+            /* border: none; */
+            background-color: transparent;
+            border: 1px solid var(--color8);
+            border-radius: 5px 0 0 5px;
+            color: var(--color8);
+            text-align: center;
+        }
 
+        input::placeholder {
+            color: var(--color8);
+        }
+
+        button {
+            border: none;
+            padding: 7px;
+            border-radius: 0 5px 5px 0;
+            background-color: var(--color8);
+        }
+    }
 
 
 
