--- a/css/tecnologias.css
+++ b/css/tecnologias.css
@@ -34,14 +34,19 @@ p {
     height: 370px;
     border-radius: 20px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
-    border-top: 6px solid var(--color7);
-    border-bottom: 6px solid var(--color7);
+    border-top: 6px solid var(--colorQ1);
+    border-bottom: 6px solid var(--colorQ1);
     position: relative;
     padding: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
     overflow: hidden;
+    transition: .4s;
+}
+.card_tecnologia:hover{
+    border-top: 6px solid var(--color7);
+    border-bottom: 6px solid var(--color7);
 }
 
 .card_tecnologia circle {
