--- a/css/header.css
+++ b/css/header.css
@@ -41,6 +41,7 @@ body {
     /* height: 100vh; */
     /* height: min-content; */
     background: url(/img/background-img.jpg);
+    /* background: url(/img/6564bb2cf0975c926b603b7133486307.jpg); */
     background-position: center;
     background-size: cover;
 }
