--- a/css/Meus_Projetos.css
+++ b/css/Meus_Projetos.css
@@ -1,5 +1,4 @@
-
-.content_Project h1 span{
+.content_Project h1 span {
     background: var(--gradiente);
     background-clip: text;
     color: transparent;
@@ -21,11 +20,16 @@
     width: 100%;
 }
 
+.projeto_descricao {
+    display: none;
+}
+
 .projeto-1,
 .projeto-2,
 .projeto-3,
 .projeto-4,
 .projeto-5 {
+    /* margin-bottom: 100px; */
     height: 400px;
     border-radius: 2px;
     background-color: var(--color1);
@@ -72,31 +76,67 @@
 }
 
 @media (max-width: 800px) {
+    .content_Project {
+        /* margin-bottom: 80px; */
+    }
+
     .Project {
         display: flex;
         flex-wrap: wrap;
+        gap: 100px;
     }
+
     .projeto-1,
     .projeto-2,
     .projeto-3,
     .projeto-4,
     .projeto-5 {
         width: 100%;
+        position: relative;
+        justify-content: left;
+
+
+
+    }
+
+    .projeto_descricao {
+        display: block;
+        margin-top: 5px;
+        width: 100%;
+        position: absolute;
+        top: 100%;
+
+        p {
+            text-align: left;
+            font-size: 15px;
+            font-weight: 500;
+        }
     }
 
 }
-@media (max-width: 450px){
-    .content_Project{
+
+@media (max-width: 550px) {
+    .content_Project {
+        padding: 0 12px;
         margin-top: 25px;
-        gap: 10px;
+        gap: 20px;
     }
+
+    .Project {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 50px;
+    }
+
     .projeto-1,
     .projeto-2,
     .projeto-3,
     .projeto-4,
     .projeto-5 {
+        margin-bottom: 110px;
+
         height: 200px;
-        border-radius: 20px;
+        border-radius: 10px;
     }
 
 }
