--- a/css/header.css
+++ b/css/header.css
@@ -100,7 +100,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: var(--gradiente);
+    background-color: var(--colorV2);
     width: 100%;
     height: 50px;
     z-index: 100;
@@ -202,11 +202,6 @@ body {
 
     }
 
-    .menu.active .menu-header {
-        /* opacity: 1;
-        height: 325px; */
-    }
-
     .menu.active .menu-header li {
         padding: 15px 30px;
         transform: translateX(0px);
@@ -239,3 +234,4 @@ body {
     }
 
 }
+
