--- a/css/header.css
+++ b/css/header.css
@@ -44,6 +44,16 @@ body {
     /* background: url(/img/6564bb2cf0975c926b603b7133486307.jpg); */
     background-position: center;
     background-size: cover;
+    position: relative;
+}
+.content::before{
+   content: "";
+   width: 100%;
+   height: 100%;
+    background:inherit;
+    filter: blur(1px);
+    position: absolute;
+  
 }
 
 /* ============================ formatacão da descricão do portfolio ===============*/
@@ -57,7 +67,9 @@ body {
     justify-content: center;
     gap: 30px;
 }
-
+.descricao_header{
+    z-index: 2;
+}
 .content_description h1 {
     font-weight: bolder;
     position: relative;
@@ -74,6 +86,7 @@ body {
 
 .content_description p {
     width: 600px;
+    text-align: left;
     line-height: 1.4;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
 }
@@ -81,10 +94,6 @@ body {
 .content_description span {
     transition: .3s;
 }
-
-/* .content_description span:hover {
-    color: var(--color1);
-} */
 
 .logo_img {
     width: 140px;
