--- a/css/header.css
+++ b/css/header.css
@@ -37,21 +37,18 @@ body {
 
 /* ======================= header ==============*/
 .content {
-    width: 100%;
-    /* height: 100vh; */
-    /* height: min-content; */
-    background: url(/img/background-img.jpg);
-    /* background: url(/img/6564bb2cf0975c926b603b7133486307.jpg); */
+    width: 100%; 
+    background: url(../img/background-img.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
 }
+
 .content::before{
    content: "";
    width: 100%;
    height: 100%;
-    background:inherit;
-    filter: blur(1px);
+    background:rgba(0, 0, 0, .4);
     position: absolute;
   
 }
@@ -75,20 +72,17 @@ body {
     position: relative;
     font-size: 70px;
     color: var(--color8);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
 }
 
 .content_description h2 {
     font-size: 30px;
     font-weight: 600;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
 }
 
 .content_description p {
     width: 600px;
     text-align: left;
     line-height: 1.4;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
 }
 
 .content_description span {
