--- a/css/contato.css
+++ b/css/contato.css
@@ -1,5 +1,6 @@
 .gmail {
     margin: 50px 0;
+    padding: 7vh 0;
     text-align: center;
 }
 
@@ -18,10 +19,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-
-  
-
-
 }
 .form h2 {
     color: var(--color8);
