--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,9 @@
     outline: none;
     font-family: 'Poppins', sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 :root {
     --color1: #ff3366;
@@ -105,7 +108,8 @@ body {
     justify-content: space-between;
     background-color: var(--colorV2);
     width: 100%;
-    height: 50px;
+    height: 10vh;
+    /* height: 50px; */
     z-index: 100;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
 }
@@ -136,6 +140,7 @@ body {
     color: var(--color8);
     transition: .4s;
 }
+
 
 .menu-header li:hover {
     border-radius: 5px;
