--- a/css/Meus_Projetos.css
+++ b/css/Meus_Projetos.css
@@ -6,12 +6,72 @@
 
 .content_Project {
     padding: 0 30px;
-    padding-top:20vh ;
+    padding-top: 20vh;
     margin-top: 80px;
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
+
+.content_link_projeto {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    transition: .5s;
+}
+
+.content_link_projeto:hover {
+    background-color: rgba(0, 0, 0, .5);
+
+}
+
+.abri_Pagina,
+.abri_github {
+    width: 100%;
+    height: 00%;
+    color: var(--color8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 1s;
+    overflow: hidden;
+    /* opacity: .5; */
+}
+
+.abri_Pagina *,
+.abri_github * {
+    opacity: 1;
+}
+
+.abri_Pagina {
+    background-color: var(--backgroud1);
+}
+
+.abri_Pagina span,
+.abri_github span {
+    padding: 10px 20px;
+    background: var(--gradiente);
+    cursor: pointer;
+}
+
+
+[class^="projeto-"]:hover .abri_Pagina {
+    height: 50%;
+}
+
+
+.abri_github {
+    position: absolute;
+    bottom: 0;
+    background-color: var(--backgroud2);
+}
+
+[class^="projeto-"]:hover .abri_github {
+    height: 50%;
+}
+
 
 .Project {
     display: grid;
@@ -25,17 +85,14 @@
     display: none;
 }
 
-.projeto-1,
-.projeto-2,
-.projeto-3,
-.projeto-4,
-.projeto-5 {
+[class^="projeto-"] {
     /* margin-bottom: 100px; */
     height: 400px;
     border-radius: 2px;
     background-color: var(--color1);
-
 }
+
+/*  */
 
 .projeto-1 {
     background: url(../img/img_Projeto/Captura\ de\ tela_portfólio\ 2024-01-11\ 185817.png) no-repeat;
@@ -66,14 +123,10 @@
 }
 
 @media (max-width: 1030px) {
-
-    .projeto-1,
-    .projeto-3,
-    .projeto-2,
-    .projeto-4,
-    .projeto-5 {
+    [class^="projeto-"] {
         height: 300px;
     }
+
 }
 
 @media (max-width: 800px) {
@@ -87,17 +140,10 @@
         gap: 100px;
     }
 
-    .projeto-1,
-    .projeto-2,
-    .projeto-3,
-    .projeto-4,
-    .projeto-5 {
+    [class^="projeto-"] {
         width: 100%;
         position: relative;
         justify-content: left;
-
-
-
     }
 
     .projeto_descricao {
@@ -128,16 +174,13 @@
         flex-wrap: wrap;
         gap: 50px;
     }
-
-    .projeto-1,
-    .projeto-2,
-    .projeto-3,
-    .projeto-4,
-    .projeto-5 {
+    
+    [class^="projeto-"] {
         margin-bottom: 110px;
-
         height: 200px;
         border-radius: 10px;
+        
     }
+  
 
 }
