--- a/css/Meus_Serviços.css
+++ b/css/Meus_Serviços.css
@@ -25,6 +25,7 @@
 
 .img_card{
     width: 100%;
+    height: 60%;
     position: relative;
 }
 .img_card img{
@@ -38,10 +39,9 @@
     height: 50px;
     background-color: var(--color2);
     position: absolute;
-    bottom: -20px;
+    bottom: -30px;
     left: 0;
     border-radius: 50% 0 0 0;
-    box-shadow: -2px -2px 10px var(--color8);
 }
 .img_card::after{
     content: '';
@@ -80,7 +80,11 @@
 .card_description {
     text-align: center;
     padding: 10px 20px;
-    position: relative;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: var(--color2);
 
 }
@@ -112,10 +116,14 @@
     }
     .card_description{
         width: 70%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    .img_card{
+        height: 100%;
     }
     .img_card::before{
         display: none;
@@ -142,6 +150,9 @@
         bottom: auto;
         transition: width 1s;
     }
+    .img_card{
+        height: 60%;
+    }
     .card_item:hover .img_card::after {
         height: 5px;
         width: 100%;
@@ -151,6 +162,7 @@
     }
     .card_description{
         width: 100%;
+        height: 40%;
     }
     
 }
