--- a/css/header.css
+++ b/css/header.css
@@ -24,10 +24,9 @@ html{
     --colorV1: #00CED1;
     --colorV2: #8A2BE2;
     --colorV3: #32CD32;
-    /* tons Neutros */
-    --colorN1: #808080;
-    --colorN2: #A9A9A9;
-    --coloN3: #D3D3D3;
+    /* backgorud suaves */
+    --backgroud1:rgba(102, 51, 255, 0.6);
+    --backgroud2:rgba(57, 69, 81, 0.6);
     /* gradient */
     --gradiente: linear-gradient(to right, #ff0080, #ff8c00);
     --gradiente2: linear-gradient(to right, #48AFBE, #BE6C48);
