--- a/css/tecnologias.css
+++ b/css/tecnologias.css
@@ -1,10 +1,9 @@
 .tecnologias {
     display: flex;
     flex-direction: column;
-    gap: 50px;
-    padding: 0 30px;
+    gap: 30px;
     margin-top: 40px;
-    padding-top: 20px;
+    padding: 30px;
 }
 
 .tecnologias title {
@@ -26,7 +25,6 @@ p {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    /* gap: 10px; */
 }
 
 .card_tecnologia {
@@ -48,11 +46,9 @@ p {
 
 .card_tecnologia circle {
     fill: none;
-    /* stroke: url(#GradientColor); */
     stroke-width: 20px;
     stroke-dasharray: 472;
     stroke-dashoffset: 472;
-    /* box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, .15), -6px -6px 10px -1px rgba(0, 0, 0, .15);   */
 }
 
 .card_js {
@@ -180,27 +176,51 @@ p {
 }
 
 @media (max-width: 1030px) {
-    .tecnologias{
+    .tecnologias {
         margin-top: 80px;
+        background-color: var(--color7);
+
     }
+    
     .content_card_tecnologia {
         gap: 40px;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
 
     .card_tecnologia {
         width: 45%;
+        border-top: 8px solid var(--color2);
+        border-bottom: 8px solid var(--color2);
     }
 
     .animet_fundo {
         height: 100%;
     }
-    
+
+    .tecnologias .title p,
+    .tecnologias .title h3 {
+        color: var(--color8);
+        text-align: left;
+    }
+   
     .card_tecnologia h3,
     .card_tecnologia p {
-        color: var(--color8);
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
+        color: var(--color7);
         margin-bottom: 15px;
+
+    }
+    .card_tecnologia:hover h3,
+    .card_tecnologia:hover p {
+        color: var(--color7);
+        text-shadow: none;
+    }
+
+    .card_js .animet_fundo,
+    .card_html .animet_fundo,
+    .card_css .animet_fundo,
+    .card_node .animet_fundo {
+        background-color: var(--color8);
+
     }
 }
 
@@ -211,33 +231,26 @@ p {
 
     .card_tecnologia {
         width: 100%;
-        /* height: 300px; */
         margin-bottom: 25px;
-        border-top: 6px solid var(--color8);
-        border-bottom: 6px solid var(--color8);
+        
     }
-    .tecnologias {
-        background-color: var(--color7);
-    }
+
+    
 }
 
 @media (max-width: 450px) {
-    .tecnologias{
-        padding: 15px ;
+    .tecnologias {
+        padding: 15px;
     }
 
     .card_tecnologia {
         padding: 0px 15px;
     }
 
-    .borde_card {
-        margin-top: 40px;
-        margin-bottom: 40px;
-    }
-    .tecnologias .title p,
-    .tecnologias .title h3{
-        color: var(--color8);
-        text-align: left;
-    }
+
    
+
+   
+
+
 }
