--- a/css/Meus_Projetos.css
+++ b/css/Meus_Projetos.css
@@ -118,7 +118,7 @@
 }
 
 .projeto-4 {
-    background: url(/img/img_Projeto/Captura\ de\ tela-after-\ 2024-01-16\ 184533.png) no-repeat;
+    background: url(../img/img_Projeto/Captura\ de\ tela-after-\ 2024-01-16\ 184533.png) no-repeat;
     background-position: center;
     background-size: cover;
     grid-column: 2;
