atuualização legendas projetos-cell

--- a/css/Meus_Projetos.css
+++ b/css/Meus_Projetos.css
@@ -111,7 +111,7 @@
 
 .projeto-3 {
     background: url(../img/img_Projeto/Captura\ de\ tela-menu-\ 2024-01-16\ 183323.png);
-    background-position: right;
+    background-position:top;
     background-size: cover;
     grid-column: 1;
     grid-row: 2;
