--- a/css/header.css
+++ b/css/header.css
@@ -95,7 +95,6 @@ body {
     width: 140px;
     height: 140px;
     border-radius: 6px;
-    /* background-color: var(--color7); */
     background: url(../img/WhatsApp\ de\ 2024-01-17\ à\(s\)\ 14.57.33_b4f22dcd.jpg);
     background-position: center;
     background-size: cover;
@@ -221,9 +220,9 @@ body {
     }
 
     .menu:not(.active) .menu-header li {
-        transform: translateX(-100%); /* Reverte a transformação para 0% */
+        transform: translateX(-100%);
         opacity: 1;
-        transition-delay: calc(.1s * var(--i)); /* Inverte a transição para saída quando não está ativo */
+        transition-delay: calc(.1s * var(--i)); 
     }
     
 
