--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,8 @@
     outline: none;
     font-family: 'Poppins', sans-serif;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
 
@@ -25,80 +26,32 @@ html{
     --colorV2: #8A2BE2;
     --colorV3: #32CD32;
     /* backgorud suaves */
-    --backgroud1:rgba(102, 51, 255, 0.7);
-    --backgroud2:rgba(57, 69, 81, 0.7);
+    --backgroud1: rgba(102, 51, 255, 0.7);
+    --backgroud2: rgba(57, 69, 81, 0.7);
     /* gradient */
-    --gradiente: linear-gradient(to right, #ff0080, #ff8c00);
+    --gradiente: linear-gradient(to right, #ff0080, #ff8c0097);
     --gradiente2: linear-gradient(to right, #48AFBE, #BE6C48);
 }
 
 body {
-    background-color: white;
     box-sizing: border-box;
 }
 
 /* ======================= header ==============*/
 .content {
-    width: 100%; 
-    background: url(../img/background-img.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-}
-
-.content::before{
-   content: "";
-   width: 100%;
-   height: 100%;
-    background:rgba(0, 0, 0, .4);
-    position: absolute;
-  
-}
-
-/* ============================ formatacão da descricão do portfolio ===============*/
-
-.content_description {
-    max-width: 100%;
-    padding: 50px;
-    color: var(--color8);
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    gap: 30px;
-}
-.descricao_header{
-    z-index: 2;
-}
-.content_description h1 {
-    font-weight: bolder;
     position: relative;
-    font-size: 70px;
-    color: var(--color8);
 }
 
-.content_description h2 {
-    font-size: 30px;
-    font-weight: 600;
-}
+.content video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 
-.content_description p {
-    width: 600px;
-    text-align: left;
-    line-height: 1.4;
-}
-
-.content_description span {
-    transition: .3s;
-}
-
-.logo_img {
-    width: 140px;
-    height: 140px;
-    border-radius: 6px;
-    background: url(../img/WhatsApp\ de\ 2024-01-17\ à\(s\)\ 14.57.33_b4f22dcd.jpg);
-    background-position: center;
-    background-size: cover;
-    z-index: 1;
 }
 
 /*=============================== formatão menu  ================  */
@@ -176,14 +129,10 @@ body {
 }
 
 @media (max-width: 900px) {
-    .content_description {
-        padding: 10px 20px;
-    }
-
-    .content_description h1 {
-        font-size: 40px;
-    }
-
+    /* .content{
+        height: 90vh;
+    } */
+   
     .menu-header {
         display: block;
         padding: 0;
@@ -200,7 +149,7 @@ body {
         top: 45px;
         padding: 0;
         height: 0;
-        
+
         transition: 1s;
     }
 
@@ -222,9 +171,9 @@ body {
     .menu:not(.active) .menu-header li {
         transform: translateX(-100%);
         opacity: 1;
-        transition-delay: calc(.1s * var(--i)); 
+        transition-delay: calc(.1s * var(--i));
     }
-    
+
 
     .menu {
         width: 100%;
@@ -233,18 +182,9 @@ body {
 
 }
 
-@media (max-width: 650px) {
+/* @media (max-width: 750px) {
+     .content{
+        height: 80vh;
+     }
 
-    .content_description p {
-        width: 100%;
-    }
-
-    .logo_portfolio {
-        display: none;
-    }
-    .descricao_header p{
-        display: none;
-    }
-
-}
-
+} */
