--- a/css/Meus_Serviços.css
+++ b/css/Meus_Serviços.css
@@ -16,7 +16,7 @@
     
 }
 .content_title h1 span{
-    background: linear-gradient(to right, #ff8c00, #ff0080);
+    background: var(--gradiente);
     background-clip: text;
     color: transparent;
 }
