--- a/css/footer.css
+++ b/css/footer.css
@@ -1,40 +1,7 @@
-.footer {
-    width: 100%;
-    height: 150px;
-    background-color: var(--color2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.redes_sociais {
-    display: flex;
-    gap: 50px;
-}
-.redes_sociais li{
-    display: flex;
-    align-items: center;
-    /* gap: 10px; */
-}
-.redes_sociais li img {
-    width: 40px;
-    height: 40px;
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
-}
-
-.redes_sociais li p{
-    width: 100px;
-    font-weight: bold;
-    padding: 2px 4px;
-    border-radius: 5px;
-    color: var(--color8);
-    /* background-color: var(--color8); */
-}
-
 .copyright {
     width: 100%;
     height: 70px;
-    background-color: var(--color7);
+    background-color: var(--color1R);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,15 +17,7 @@
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
 @media (max-width: 800px) {
-    .footer {
-        height: 100%;
-        padding: 30px;
-        /* justify-content: left; */
-    }
-
-    .redes_sociais {
-        flex-direction: column;
-    }
+  
     .copyright{
         padding: 0 20px;
         justify-content: left;
